It's been a long time... Scripts are work in progress, ip is hard-coded in them. build.sh: fixed problem of '+1' version number; after upload, waits for some logs to grab build.xml: the project is presheaf now, hence all the renaming web.xml: same here, services renamed ec2setup: minor fixes setup.txt: now focuses on micro a bunch of binaries removed (they are installed by apt-get samples: Added lambda cube, and a bunch of other cleanups Got rid of ScalaHttpRequest DiagramPage.scala: added version visualization and minor things DiagramRenderer.scala: log is split into lines; using script for running the job; decoder - fixed file-naming errors DiagramSamples.scala: reads samples from resource DiagramService.scala: returns an xml, not html HtmlSnippets.scala: dws format changed (specifying output format) OS.scala: exceptions serialized (for debugging? h.z.) PresheafServlet.scala: added cheap logging, subclassing from HttpServlet PullbackPage, PullbackService.scala: gone todo.txt: current update.sh: using flag file to make sure the war is all there; a bunch of other caveats and fixes index.html: just pr

--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,13 @@
   <body>
     <h1>Diagram Renderer</h1>
     <p>
-      Read <a href="file:///home/vlad/archive/cat/codecamp/xy-3.8.3/Xy-pic.html">xypic docs</a> regarding how to write diagrams in xypic format.
+      Check out <a href="http://www.tug.org/applications/Xy-pic/">http://www.tug.org/applications/Xy-pic/</a> regarding xypic.
     </p>
-    <p><a href="pullback">diagram renderer</a>
+    <p>
+      <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">This pdf</a> tells in details how to write diagrams in xypic format.
+    </p>
+
+    <p><a href="main">diagram renderer</a>
     </p>
   </body>
 </html>
