--- a/web/index.html
+++ b/web/index.html
@@ -26,25 +26,34 @@
             $("d_error").innerHTML = msg
           }
 
-          function send() {
-            var uri = "dws?format=" + getFormat() + "&in=" + getInput()
+          function image(url) {
+            var img = new Image()
+            img.src = url
+            return img
+          }
+
+          function show(diagram) {
+            setState("Here's your diagram")
+            $("d_png").src=diagram.image.src
+            $("d_pdf").href=diagram.pdfUrl
+            $("d_txt").innerHTML=diagram.source
+            $("d_version").innerHTML=diagram.version
+            $("d_results").style.display="block"
+          }
+
+          function send(input, format, show) {
+            var uri = "dws?format=" + format + "&in=" + input
             var xhr = new XMLHttpRequest()
             $("d_results").style.display="none"
             $("d_error").innerHTML = ""
             setState("Please wait...")
-            xhr.onreadystatechange=function()
-            {
-               if (xhr.readyState==4) {
-                 if (xhr.status==200)
-                 {
+            xhr.onreadystatechange = function() {
+               if (xhr.readyState == 4) {
+                 if (xhr.status == 200) {
                    try {
                      var response = eval("(" + xhr.responseText + ")")
-                     setState("Here's your diagram")
-                     $("d_png").src=response.image
-                     $("d_pdf").href=response.pdf
-                     $("d_txt").innerHTML=response.source
-                     $("d_version").innerHTML=response.version
-                     $("d_results").style.display="block"
+                     diagram.image = image(response.imageUrl)
+                     show(response)
                    } catch (e) {
                      error("oops, " + e)
                    }
@@ -61,7 +70,7 @@
 
         <h1 id="d_status">Enter your diagram</h1>
         <span id="d_error" style="color:red"></span>
-        <span id="d_results" style="display:none">
+<span id="d_results" style="display:none">
         <p><b id="d_txt"></b></p>
 <p><img id="d_png"</img></p><p><a id="d_pdf">pdf</a></p><p></p>
 </span>
@@ -73,7 +82,7 @@
          </select>
          <textarea cols="60" id="d_in" name="in" rows="10">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
 
-         <input type="button" value="Submit" onclick="send()"></input>
+         <input type="button" value="Submit" onclick="send(getInput(), getFormat(), show)"></input>
        </form>
         <p>
           <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">This pdf</a> tells in details how to write diagrams in xypic format.
