--- a/web/index.html
+++ b/web/index.html
@@ -1,97 +1,43 @@
 <html>
-      <head>
-        <title>Here's your diagram</title>
-      </head>
-      <body>
-        <script language="javascript">
-          function $(id) {
-            return document.getElementById(id)
-          }
-          function getInput() {
-            return encodeURIComponent($("d_in").value)
-          }
+  <head>
+    <title>Here's your diagram</title>
+    <link rel=StyleSheet type="text/css" href="1.css">
+  </head>
+  <body>
+    <div id="fullBody">
+      <script language="javascript" src="presheaf.js">
+      </script>
+      <div id="titlebar">
+         <h1 id="d_status">Diagram Renderer</h1>
+      </div>
+      <div id="main">
+        <div id="history">
+        </div>
+        <div id="textDiv">
+          <span id="d_error" style="color:red"></span>
+          <span id="d_results" style="display:none">
+            <p><b id="d_txt"></b></p>
+            <p><img id="d_png"</img></p><p><a id="d_pdf">pdf</a></p><p></p>
+          </span>
+          <form>
+            <select id="d_format" name="format">
+              <option value="xy">xypic</option>
+              <option value="graph">graph</option>
+              <option value="guess">ascii art</option>
+            </select>
+             <textarea cols="60" id="d_in" name="in" rows="10">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
+             <input type="button" value="Submit" onclick="commit()"></input>
+           </form>
+          <p>
+            <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">This pdf</a> tells in details how to write diagrams in xypic format.
+          </p>
 
-          function getFormat() {
-            var s = $("d_format")
-            return s.options[s.selectedIndex].value
-          }
+          <a href="samples">Samples</a><br></br>
 
-          function setState(state) {
-            $("d_status").innerHTML = state
-            document.title = state
-          }
-
-          function error(msg) {
-            setState("error")
-            $("d_error").innerHTML = msg
-          }
-
-          function image(url) {
-            var img = new Image()
-            img.src = url
-            return img
-          }
-
-          function show(diagram) {
-            setState("Here's your diagram")
-            $("d_png").src=diagram.image.src
-            $("d_pdf").href=diagram.pdfUrl
-            $("d_txt").innerHTML=diagram.source
-            $("d_version").innerHTML=diagram.version
-            $("d_results").style.display="block"
-          }
-
-          function send(input, format, show) {
-            var uri = "dws?format=" + format + "&in=" + input
-            var xhr = new XMLHttpRequest()
-            $("d_results").style.display="none"
-            $("d_error").innerHTML = ""
-            setState("Please wait...")
-            xhr.onreadystatechange = function() {
-               if (xhr.readyState == 4) {
-                 if (xhr.status == 200) {
-                   try {
-                     var response = eval("(" + xhr.responseText + ")")
-                     response.image = image(response.imageUrl)
-                     show(response)
-                   } catch (e) {
-                     error("oops, " + e)
-                   }
-                 } else {
-                   error("Got error " + xhr.status + " from the server.")
-                 }
-               }
-            }
-            xhr.open("GET", uri, true)
-            xhr.send()
-          }
-
-        </script>
-
-        <h1 id="d_status">Enter your diagram</h1>
-        <span id="d_error" style="color:red"></span>
-<span id="d_results" style="display:none">
-        <p><b id="d_txt"></b></p>
-<p><img id="d_png"</img></p><p><a id="d_pdf">pdf</a></p><p></p>
-</span>
-       <form>
-         <select id="d_format" name="format">
-           <option value="xy">xypic</option>
-           <option value="graph">graph</option>
-           <option value="guess">ascii art</option>
-         </select>
-         <textarea cols="60" id="d_in" name="in" rows="10">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
-
-         <input type="button" value="Submit" onclick="send(getInput(), getFormat(), show)"></input>
-       </form>
-        <p>
-          <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">This pdf</a> tells in details how to write diagrams in xypic format.
-        </p>
-
-        <a href="samples">Samples</a><br></br>
-
-        <font size="-2"> <span id="d_version">h.z.</span> Copyright (c) Vlad Patryshev</font><br></br><i>Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a></i>
-
-     </body>
-   </html>
+          <font size="-2"> <span id="d_version">h.z.</span> Copyright (c) Vlad Patryshev</font><br></br><i>Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a></i>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
 
