--- a/web/newpage.html
+++ b/web/newpage.html
@@ -5,92 +5,13 @@
   </head>
   <body>
     <div id="fullBody">
-      <script language="javascript">
-        function $(id) {
-          return document.getElementById(id)
-        }
-        function getInput() {
-          return encodeURIComponent($("d_in").value)
-        }
-
-        function getFormat() {
-          var s = $("d_format")
-          return s.options[s.selectedIndex].value
-        }
-
-        function setState(state) {
-          $("d_status").innerHTML = state
-          document.title = state
-        }
-
-        function error(msg) {
-          setState("error")
-          $("d_error").innerHTML = msg
-        }
-
-        function texRef(id) {
-          return "cache/" + id + ".tex"
-        }
-
-        function pdfRef(id) {
-          return "cache/" + id + ".pdf"
-        }
-
-          function imgRef(id) {
-            return "cache/" + id + ".png"
-          }
-
-        function image(id) {
-          var img = new Image()
-          img.src = imgRef(id)
-          return img
-        }
-
-        function showZooming(z) {
-          return function(diagram) {
-            setState("Here's your diagram")
-            $("d_png").src=diagram.image.src
-            $("d_pdf").href=pdfRef(diagram.id)
-            $("d_txt").innerHTML=diagram.source
-            $("d_version").innerHTML=diagram.version
-            $("d_results").style.display="block"
-          }
-        }
-
-        function send(input, format, show) {
-          var uri = "dws?format=" + format + "&in=" + input
-          var xhr = new XMLHttpRequest()
-          $("d_results").style.display="none"
-          $("d_error").innerHTML = ""
-          setState("Please wait...")
-          xhr.onreadystatechange = function() {
-             if (xhr.readyState == 4) {
-               if (xhr.status == 200) {
-                 try {
-                   var response = eval("(" + xhr.responseText + ")")
-                   response.image = image(response.id)
-                   response.image.onload = function() {
-                     show(response)
-                   }
-                 } catch (e) {
-                   error("oops, " + e)
-                 }
-               } else {
-                 error("Got error " + xhr.status + " from the server.")
-               }
-             }
-          }
-          xhr.open("GET", uri, true)
-          xhr.send()
-        }
-
+      <script language="javascript" src="presheaf.js">
       </script>
       <div id="titlebar">
          <h1 id="d_status">Diagram Renderer</h1>
       </div>
       <div id="main">
         <div id="history">
-          bla bla bla
         </div>
         <div id="textDiv">
           <span id="d_error" style="color:red"></span>
@@ -105,7 +26,7 @@
               <option value="guess">ascii art</option>
             </select>
              <textarea cols="60" id="d_in" name="in" rows="10">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
-             <input type="button" value="Submit" onclick="send(getInput(), getFormat(), showZooming(1))"></input>
+             <input type="button" value="Submit" onclick="commit()"></input>
            </form>
           <p>
             <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">This pdf</a> tells in details how to write diagrams in xypic format.
