--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Here's your diagram</title>
-    <link rel=StyleSheet type="text/css" href="1.css">
+      <link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
+      <link rel=StyleSheet type="text/css" href="1.css">
   </head>
   <body>
     <div id="fullBody">
