Moved samples to the main page. Simplified things. Probably should start using lift actually. Not right now though.

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
             <table>
                 <tr>
                     <td>
-                        <textarea cols="80" id="d_in" name="in" rows="5">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
+                        <textarea cols="120" id="d_in" name="in" rows="15">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
                     </td>
                     <td>
                         <select id="d_format" name="format">
@@ -39,17 +39,15 @@
             </span>
             <br/>
             Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a> or read <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">this</a>.<br/>
-            <a href="samples">Samples</a><br/>
             <font size="-2">Ver. <span id="d_version">h.z.</span> Copyright (c) 2010-3010, Vlad Patryshev</font><br/>
 
         </div>
 
         <div id="imageView"></div>
       </div>
+      <div id="samples0"></div>
+      <div id="samples1"></div>
     </div>
-    <script>
-        fillIn()
-    </script>
   </body>
 </html>
 
