--- a/web/newpage.html
+++ b/web/newpage.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <title>Here's your diagram</title>
-    <link rel=StyleSheet type="text/css" href="1.css">
+      <link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
+      <link rel=StyleSheet type="text/css" href="2.css">
   </head>
   <body>
-    <div id="fullBody">
+    <div id="fullBody">ry
       <script language="javascript" src="presheafnew.js">
       </script>
       <div id="titlebar">
@@ -34,22 +35,19 @@
             <span id="d_error" style="color:red"></span>
             <span id="d_results" style="display:none">
               <p><b id="d_txt"></b></p>
-              <p></p><a id="d_pdf">pdf</a></p>
-              <p><img id="d_png"</img></p><p></p>
+              <p><img id="d_png"</img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a id="d_pdf">pdf</a></p><p></p>
             </span>
-
+            <br/>
             Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a> or read <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">this</a>.<br/>
-            <a href="samples">Samples</a><br/>
             <font size="-2">Ver. <span id="d_version">h.z.</span> Copyright (c) 2010-3010, Vlad Patryshev</font><br/>
 
         </div>
 
         <div id="imageView"></div>
       </div>
+      <div id="samples0"></div>
+      <div id="samples1"></div>
     </div>
-    <script>
-        fillIn()
-    </script>
   </body>
 </html>
 
