--- a/web/newpage.html
+++ b/web/newpage.html
@@ -2,10 +2,10 @@
   <head>
     <title>Here's your diagram</title>
       <link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
-      <link rel=StyleSheet type="text/css" href="2.css">
+      <link rel=StyleSheet type="text/css" href="1.css">
   </head>
   <body>
-    <div id="fullBody">ry
+    <div id="fullBody">
       <script language="javascript" src="presheafnew.js">
       </script>
       <div id="titlebar">
@@ -19,15 +19,15 @@
             <table>
                 <tr>
                     <td>
-                        <textarea cols="80" id="d_in" name="in" rows="5">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
+                        <textarea cols="120" id="d_in" name="in" rows="15">X \ar@/_2pc/[rr]_{f;g} \ar[r]^f &amp;Y \ar[r]^g &amp;Z\</textarea>
                     </td>
                     <td>
-                        <select id="d_format" name="format">
+                        <select id="d_format" name="format" style="visibility:hidden">
                           <option value="xy">xypic</option>
                           <option value="graph">graph</option>
                           <option value="guess">ascii art</option>
                         </select><br>
-                        <input type="button" value="Submit" onclick="commit()"></input><br/>
+                        <input type="button" value="Render" onclick="commit()"/><br/>
                     </td>
                 </tr>
             </table>
@@ -35,7 +35,11 @@
             <span id="d_error" style="color:red"></span>
             <span id="d_results" style="display:none">
               <p><b id="d_txt"></b></p>
-              <p><img id="d_png"</img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a id="d_pdf">pdf</a></p><p></p>
+              <p><img id="d_png"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                 <a id="d_pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                 <textarea cols="20" rows="4" readonly="readonly" id="d_quote"></textarea>
+              </p>
+                <p></p>
             </span>
             <br/>
             Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a> or read <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">this</a>.<br/>
