added template files for both xy and tikz added a script for tikz script for xy now works via templates minor things with update and index.html

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="fullBody">
-    <script language="javascript" src="presheafnew.js">
+    <script language="javascript" src="presheaf.js">
     </script>
     <div id="titlebar">
         <h1 id="d_status">Diagram Renderer</h1>
