Fixed a bug whereby new lines were being removed from input updated the todo updated index.html removed "decoding" in renderer - we don't decode anymore tikz template - a bunch of libraries suddenyly included

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,11 @@
                 <p></p>
             </span>
             <br/>
-            Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a> or read <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">this</a>.<br/>
+            Questions? <a href="mail:vpatryshev@gmail.com">ask me...</a> or see<br/>
+            <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">xy guide</a>,<br/>
+            <a href="http://paws.wcu.edu/tsfoguel/tikzpgfmanual.pdf">tikz manual</a>,<br/>
+            <a href="http://www.texample.net/tikz/examples/">tikz examples</a>,
+            .<br/>
             <font size="-2">Ver. <span id="d_version">h.z.</span> Copyright (c) 2010-3010, Vlad Patryshev</font><br/>
 
         </div>
