Using sbt now, with James' plugin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
             <a href="http://paws.wcu.edu/tsfoguel/tikzpgfmanual.pdf">tikz manual</a>,<br/>
             <a href="http://www.texample.net/tikz/examples/">tikz examples</a>,
             .<br/>
-            <font size="-2">Ver. <span id="d_version">h.z.</span> Copyright (c) 2010-3010, Vlad Patryshev</font><br/>
+            <font size="-2">Ver. <span id="d_version">h.z.</span> Copyright (c) 2010-3010, Vlad Patryshev.</font><br/>
 
         </div>
 
