Tracking the build version. Some js style fixes. WIP.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,6 +39,11 @@
                   <a id="d_pdf">pdf</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <textarea cols="20" rows="4" readonly="readonly" id="d_quote"></textarea>
               </p>
+                    <object id="d_pdf_o" data="?" type="application/pdf">
+                        <embed id="d_pdf_e" src="?" type="application/pdf" />
+                    </object>
+<!--
+                <iframe id="d_pdf_i" style="border:1px solid #666CCC" title="PDF in an i-Frame" src="?" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>-->
                 <p></p>
             </span>
             <br/>
