--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
         <div id="history">
         </div>
         <div id="textDiv">
+            <h3><b>Attention</b>. This is an experimental version, with new hosting. Please let me know if you find any issues - Vlad.</h3>
             <form>
                 <table>
                     <tr>
@@ -42,8 +43,7 @@
                     <object id="d_pdf_o" data="?" type="application/pdf">
                         <embed id="d_pdf_e" src="?" type="application/pdf" />
                     </object>
-<!--
-                <iframe id="d_pdf_i" style="border:1px solid #666CCC" title="PDF in an i-Frame" src="?" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>-->
+
                 <p></p>
             </span>
             <br/>
@@ -51,7 +51,7 @@
             <a href="http://ctan.org/tex-archive/macros/generic/diagrams/xypic/xy/doc/xyguide.pdf">xy guide</a>,<br/>
             <a href="http://paws.wcu.edu/tsfoguel/tikzpgfmanual.pdf">tikz manual</a>,<br/>
             <a href="http://www.texample.net/tikz/examples/">tikz examples</a>,
-            .<br/>
+            .<br/><br/><br/>
             <font size="-2">Ver. <span id="d_version">h.z.</span> Copyright (c) 2010-3010, Vlad Patryshev.</font><br/>
 
         </div>
