--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8"/>
     <title>Here's your diagram</title>
     <link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
     <link rel=StyleSheet type="text/css" href="1.css">
@@ -62,4 +63,3 @@
 </div>
 </body>
 </html>
-
