Implemented deletion from history.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,20 @@
     <link rel=StyleSheet type="text/css" href="1.css">
 </head>
 <body>
+<!--
+<div class="container">
+    <img src="http://presheaf.com/cache/d3c6h6e5k6m5a1r68340225b4v5pq5l.png" alt="Sample0" class="image">
+    <div class="overlay" align="right">
+        <div onclick="alert('help!')">&times;&nbsp;</div>
+    </div>
+</div>
+<div class="container">
+    <img src="http://presheaf.com/cache/d3c6h6e5k6m5a1r68340225b4v5pq5l.png" alt="Sample1" class="image">
+    <div class="overlay" align="right">
+        <div onclick="alert('help!')">&times;&nbsp;</div>
+    </div>
+</div>
+-->
 <div id="fullBody">
     <script language="javascript" src="presheaf.js">
     </script>
