--- a/src/main/webapp/huindex.html
+++ b/src/main/webapp/huindex.html
@@ -6,25 +6,27 @@
     <link rel=StyleSheet type="text/css" href="1.css">
 </head>
 <body>
-<!--
-<div class="container">
-    <img src="http://presheaf.com/cache/d3c6h6e5k6m5a1r68340225b4v5pq5l.png" alt="Sample0" class="image">
-    <div class="overlay" align="right">
-        <div onclick="alert('help!')">&times;&nbsp;</div>
-    </div>
-</div>
-<div class="container">
-    <img src="http://presheaf.com/cache/d3c6h6e5k6m5a1r68340225b4v5pq5l.png" alt="Sample1" class="image">
-    <div class="overlay" align="right">
-        <div onclick="alert('help!')">&times;&nbsp;</div>
-    </div>
-</div>
--->
 <div id="fullBody">
     <script language="javascript" src="presheaf.js">
     </script>
     <div id="titlebar">
-        <h1 id="d_status">Diagram Renderer</h1>
+        <table width="100%"><tr><td>
+            <h1 id="d_status">Diagram Renderer</h1>
+        </td>
+            <td>
+        <td align="right">
+                <fb:login-button
+                        scope="public_profile,email"
+                        onlogin="checkLoginState();">
+                </fb:login-button></td>
+            <script>
+function checkLoginState() {
+  FB.getLoginStatus(function(response) {
+    alert(response.status + "\nuser " + response.authResponse.userID);
+  });
+}            </script>
+        </td>
+        </tr></table>
     </div>
     <div id="main">
         <div id="history">
@@ -97,11 +99,5 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-<!-- this is a test tag -->
-<!--
-<div class="fb-login-button" data-max-rows="1" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">
--->
-</div>
-<!-- this is the end of the test tag -->
 </body>
 </html>
